traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:5: error: method diag is defined twice
  conflicting symbols both originated in file 'plm.runtime69.TraversalDiagonal'
def diag() {
    ^