traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.code

var diag = 0;

var j=0

def diag() {
  for(i<-1 to 6) {
    while (!estFaceMur) {
    	setPos(i,j)  
    	j=j+1
    }
   	
  }}

















override def run() {
  diag()
}